--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '17'
 
       - name: Install Apache Ant
         run: sudo apt-get update && sudo apt-get install -y ant
 
       - name: Build project with Ant
-       run: ant clean jar
+        run: ant clean compile
