--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -2,26 +2,22 @@ name: Java CI with Ant
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: '17'
+    - name: Set up JDK
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Install Apache Ant
-        run: sudo apt-get update && sudo apt-get install -y ant
-
-      - name: Build project with Ant
-        run: ant clean compile
+    - name: Build with Ant
+      run: ant clean compile
